file-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-app
  namespace: default
spec:
  replicas: 2 # ローリングアップデート時に無停止にするため2台にします
  selector:
    matchLabels:
      app: file-app
  template:
    metadata:
      labels:
        app: file-app
    spec:
      containers:
      - name: nginx
        # ここを今後GitHub Actionsが自動で書き換えます
        image: ghcr.io/parumenn/file-k8s:a608f530fe5ed4dc8ef8bebe8fe3af5104ed0ba9
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
          # PVC（保存データ）は /data フォルダとしてマウントします
          - mountPath: /usr/share/nginx/html/data
            name: file-data
      volumes:
        - name: file-data
          persistentVolumeClaim:
            claimName: file-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: file-svc
  namespace: default
spec:
  selector:
    app: file-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
