file-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: file.parumenn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: file-svc
            port:
              number: 80
